--- a/src/components/rightMenu/header/header.css
+++ b/src/components/rightMenu/header/header.css
@@ -1,12 +1,3 @@
-preview-bar {
-    position: absolute;
-    width: 50%;
-    height: 40px;
-    top: 40px;
-    box-sizing: border-box;
-    z-index: 20;
-    padding: 0 5px;
-    right: 0;
-    text-align: right;
-    background: #cfd8dc;
+.rigth-header-btn {
+    font-size: 15px;
 }
