--- a/src/components/mainHeader/mainHeader.css
+++ b/src/components/mainHeader/mainHeader.css
@@ -2,13 +2,16 @@
     background-color: #18bb7c;
     width: 100%;
     height: 5vh;
+    min-height: 40px;
 }
 
 .imageText{
     height: 2vh;
+    min-height: 20px;
 }
 
 .imageCube{
     height: 5vh;
     margin-right: 15px;
+    min-height: 38px;
 }
