--- a/src/components/centerMenu/codeItem/codeItem.css
+++ b/src/components/centerMenu/codeItem/codeItem.css
@@ -12,8 +12,12 @@ ul {
     list-style: none;
     margin: 0;
     padding: 0;
+    height:20px;
 }
-
+.card-header-div{
+    height: 30px;
+    min-width: 100px;
+}
 div.accordion li span:first-child {
     background: #b18647;
     background: #ec7c67;
@@ -31,4 +35,14 @@ div.accordion li span:first-child {
     padding-left: 0;
     padding-right: 0;
     min-width: 25vh;
+}
+
+p{
+    margin-top: -15px;
+}
+
+.card-body-div{
+    overflow-y: scroll;
+    height: 20vh;
+    padding-left: 0;
 }
