--- a/src/components/centerMenu/main/centerMenu.css
+++ b/src/components/centerMenu/main/centerMenu.css
@@ -2,6 +2,6 @@
     border-style:ridge;
     padding-right:0;
     padding-left:0;
-    height: 70vh;
-    min-height: 678.3px;
+    height: 93vh;
+    min-height: 93vh;
 }
