--- a/src/components/centerMenu/header/header.css
+++ b/src/components/centerMenu/header/header.css
@@ -17,6 +17,24 @@ input{
     background-color: dimgrey;
     height: 34px;
     border: none;
+    color:#ebf1f1;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: small;
+}
+
+.btn-tip-font{
+    float: right;
+    font-weight: bold;
+}
+
+.code-span{
+    font-size: 13px !important;
+    color: white !important;
+}
+
+.fontsize{
+    font-size: 16px !important;
 }
 
 mode-bar a.mode {
